test_results_defects/infer_test/double_free/report.txt
#0
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/double_free.c:37: error: Null Dereference
  pointer `ptr` last assigned on line 32 could be null and is dereferenced at line 37, column 3.
  35. 	for(i=0;i<10;i++)
  36. 	{
  37. 		ptr[i]='a';
        ^
  38. 		if(i==9)
  39. 		{

Found 1 issue
          Issue Type(ISSUED_TYPE_ID): #
  Null Dereference(NULL_DEREFERENCE): 1
